# RIKEA_server

./: .env  Cargo.toml
migrations/: 0002_doors_new_table.sql
src/: config.rs  customerror.rs  main.rs
src/samples/: door.rs  doors.rs  mod.rs  types.rs  windows.rs
