[package]
name = "axum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
axum = {version = "0.7.5"}
serde = { version = "1.0.207", features = ["derive"] }
tower = { version = "0.5.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["full"] }
base64 = "0.22.1"
sqlx = { version = "0.8.0", features = ["runtime-tokio-rustls" , "postgres", "chrono"] }
sqlx-cli = "0.8.0"
futures = "0.3.30"
dotenv = "0.15.0"
chrono = { version = "0.4.38", features = ["serde"] }
